2014-06-09  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: ML_BOLD_COLOR_MASK is not set to ML_{FG|BG}_COLOR.

	* xlib/x_color.c: Fix alloc_closest_xcolor_pseudo().

	* fb/x.h, fb/x_display.c: #ifdef LARGE_CACHE => #ifndef COLOR_CACHE_MINIMUM.

	* README.ja, man/mlterm.1: Updated.

2014-06-09  Araki Ken  <arakiken@users.sf.net>

	* fb/x.h, fb/x_display.c: LARGE_CACHE is added. (disabled by default.)

2014-06-09  Araki Ken  <arakiken@users.sf.net>

	* fb/x.h, fb/x_display.c: Caching in x_cmap_get_closest_color() is improved.

	* main_loop.c: Starting mlterm with -j option executes mlclient if daemon
	  process has already started.

	* daemon.[ch]:
	  - free(un_file) is called in daemon_final().
	  - daemon_get_fd() is removed.

	* x_screen_manager.c: mlclient permits unknown options.

	* kik_conf.[ch]: ignore_unknown_opt argument is added to kik_conf_parse_args().

	* ml_char.c, ml_vt100_parser.c: ML_BOLD_COLOR_MASK is set in ml_vt100_parser.c,
	  not in ml_char.c.

2014-06-07  Araki Ken  <arakiken@users.sf.net>

	* mc_logsize.c: "unlimited" is added.

	* ml_config_proto.c, ml_vt100_parser.c: Minor fixes.

2014-06-06  Araki Ken  <arakiken@users.sf.net>

	* ml_char.c: CHARSET() macro checks is_unicode_area_cs flag.

2014-06-05  Araki Ken  <arakiken@users.sf.net>

	* ml_config_proto.[ch]: ml_parse_proto_prefix() checks challenge.

	* x_draw_str.c: draw_line() is added to draw underline, double-underline or
	  crossed out line.

	* ml_vt100_parser.[ch]:
	  - SGR 9, 21, and 29 are processed.
	  - is_crossed_out is added to ml_vt100_parser_t and ml_vt100_storable_states_t.
	  - DECFRA is processed.

	* ml_edit.[ch]: ml_edit_fill_all() -> ml_edit_fill_area()

	* ml_screen.[ch]: ml_screen_fill_all_with_e() -> ml_screen_fill_area()

	* ml_char.[ch]:
	  - is_crossed_out is added to ml_char_t, ml_char_set() and ml_char_combine().
	    ml_char_is_crossed_out() is added.
	  - is_underlined == 2 means drawing underline doubly.
