@@ -36,6 +36,13 @@
 #define  PICTURE_POS_BITS  23	/* code */
 
 
+enum
+{
+	UNDERLINE_NONE ,
+	UNDERLINE_NORMAL ,
+	UNDERLINE_DOUBLE ,
+} ;
+
 /*
  * This object size should be kept as small as possible.
  * (ILP32: 64bit) (LP64: 64bit)
@@ -56,7 +63,7 @@ typedef struct ml_char
 			/*
 			 * attr member contents.
 			 * Total 23 bit
-			 * 2 bit : is_underlined(0 or 1 or 2)
+			 * 2 bit : underline_style(0 or 1 or 2)
 			 * 1 bit : is_zerowidth(0 or 1)
 			 * 2 bit : unused
 			 * 1 bit : is unicode area cs(0 or 1)
@@ -105,11 +112,11 @@ int  ml_char_final( ml_char_t *  ch) ;
 
 int  ml_char_set( ml_char_t *  ch , u_int32_t  code , mkf_charset_t  cs ,
 	int  is_fullwidth , int  is_comb , ml_color_t  fg_color , ml_color_t  bg_color ,
-	int  is_bold , int  is_italic , int  is_underlined , int  is_crossed_out) ;
+	int  is_bold , int  is_italic , int  underline_style , int  is_crossed_out) ;
 
 int  ml_char_combine( ml_char_t *  ch , u_int32_t  code , mkf_charset_t  cs ,
 	int  is_fullwidth , int  is_comb , ml_color_t  fg_color , ml_color_t  bg_color ,
-	int  is_bold , int  is_italic , int  is_underlined , int  is_crossed_out) ;
+	int  is_bold , int  is_italic , int  underline_style , int  is_crossed_out) ;
 
 /* set both fg and bg colors for reversing. */
 #define  ml_char_combine_picture( ch , id , pos) \
@@ -155,7 +162,7 @@ ml_color_t  ml_char_bg_color( ml_char_t *  ch) ;
 
 int  ml_char_set_bg_color( ml_char_t *  ch , ml_color_t  color) ;
 
-int  ml_char_is_underlined( ml_char_t *  ch) ;
+int  ml_char_underline_style( ml_char_t *  ch) ;
 
 int  ml_char_is_crossed_out( ml_char_t *  ch) ;
 
